Creates alternative GoL grid, fixes overflow issue, and fixes window size issue

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .profile_container {
@@ -66,4 +67,9 @@
       margin: 20px 0;
     }
   }
+}
+
+.cell {
+  width: 10px;
+  height: 10px;
 }
